# BPMN-Roles-Hierarchies

./: .dockerignore  .env.example  .gitignore  README.md  add_roles_to_bpmn.py  const.py  docker-compose.override.yml  format_xml.py  process_xml_input.py  tasks_roles_mapping.py
backend/: .dockerignore  Dockerfile  Dockerfile.dev  add_roles_to_bpmn.py  const.py  main.py  optimalization.py  process_xml_input.py  pyproject.toml  tasks_roles_mapping.py
backend/app/: main.py
backend/app/routers/: add_roles.py
backend/app/utils/: add_roles_to_bpmn.py  const.py  optimalization.py  process_xml_input.py
backend/routers/: add_roles.py
frontend/: Dockerfile  Dockerfile.dev  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  api.tsx  custom.d.ts  index.tsx
frontend/src/components/: BPMNViewer.tsx
frontend/src/pages/: AddingRoles.tsx  BPMNVisualisation.tsx  EventLogs.tsx  HomePage.tsx
logs/: event_log_20250326_223735.csv  new_example_changed_labels.csv  new_reviewing_no_column_names.csv  new_teleclaims_changed_labels.csv  repairExample.csv
xmls/: TeleclaimsOutput.bpmn  new_teleclaims_changed_labels.bpmn  process.bpmn  purchasingExampleOutput.bpmn  purchasingExampleOutput1.bpmn  purchasingExampleRoles.bpmn  repairExample.bpmn  repairExampleOutput.bpmn
